--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/leo-jiang",
+            "baseHref" : "/leo-jiang",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
